[BUGFIX] Improve visibility of last checked row in dark mode (#482)
* [BUGFIX] Improve visibility of last checked row in dark mode

* [BUGFIX] Improve error text contrast in dark mode

---------

--- a/Resources/Private/Sass/brofix.scss
+++ b/Resources/Private/Sass/brofix.scss
@@ -32,8 +32,42 @@ Info > Brofix (Broken Link Fixer)
 }
 
 /** mark table row of last checked record */
-#brofix-broken-links-table tr.brofix-lastchecked, #brofix-broken-links-table tr.brofix-lastchecked td  {
-    background-color: #ace9ff;
+#brofix-broken-links-table tr.brofix-lastchecked, #brofix-broken-links-table tr.brofix-lastchecked td {
+    background-color: var(--typo3-table-row-highlight-bg, #ace9ff);
+}
+html[data-bs-theme="dark"] #brofix-broken-links-table tr.brofix-lastchecked,
+html[data-bs-theme="dark"] #brofix-broken-links-table tr.brofix-lastchecked td {
+    background-color: #22364a;
+    color: var(--typo3-text-color, inherit);
+}
+
+html[data-bs-theme="dark"] #brofix-broken-links-table tr.brofix-lastchecked a,
+html[data-bs-theme="dark"] #brofix-broken-links-table tr.brofix-lastchecked td a {
+    color: inherit;
+}
+
+@media (prefers-color-scheme: dark) {
+    html:not([data-bs-theme]) #brofix-broken-links-table tr.brofix-lastchecked,
+    html:not([data-bs-theme]) #brofix-broken-links-table tr.brofix-lastchecked td {
+        background-color: #22364a;
+        color: var(--typo3-text-color, inherit);
+    }
+
+    html:not([data-bs-theme]) #brofix-broken-links-table tr.brofix-lastchecked a,
+    html:not([data-bs-theme]) #brofix-broken-links-table tr.brofix-lastchecked td a {
+        color: inherit;
+    }
+}
+
+/* contraste des erreurs en dark mode */
+html[data-bs-theme="dark"] #brofix-broken-links-table td span.error {
+    color: #eb705a;
+}
+
+@media (prefers-color-scheme: dark) {
+    html:not([data-bs-theme]) #brofix-broken-links-table td span.error {
+        color: #eb705a;
+    }
 }
 
 #brofix-broken-links-table tr td .inline-action {
